Fixes landing title align

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -169,10 +169,9 @@
 }
 
 .cities-container {
-  padding-top:20px;
   max-height:500px;
   overflow:auto;
-  padding:20px 1px 10px 1px;
+  padding:10px 1px 10px 1px;
 }
 
 .lines-editor-container {
@@ -298,4 +297,8 @@ button.save-system {
 
 .contact-icon a {
   margin-left: 5px;
+}
+
+.landing-title {
+  text-align: center;
 }
